--- a/src/components/Clock/styles.module.css
+++ b/src/components/Clock/styles.module.css
@@ -1,10 +1,6 @@
 .clockWrap {
   text-align: center;
   padding: 1rem 0;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 .timeDisplay {
