--- a/src/components/PoetryQuote/styles.module.css
+++ b/src/components/PoetryQuote/styles.module.css
@@ -1,6 +1,6 @@
 .poemCard {
   width: 100%;
-  flex: 1;
+  min-height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
